@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.4.0"
+  VERSION = "2.4.1"
 end
